postgresdb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-postgress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: db-postgress
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
