rust_api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rust_api
  template:
    metadata:
      labels:
        app: rust_api
    spec:
      containers:
        - name: apirust
          image: johanbriones/apirust
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
spec:
  selector:
    app: rust_api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
